add end point for pending / completed & update swagger
